--- a/src/app/components/employees/employees.component.css
+++ b/src/app/components/employees/employees.component.css
@@ -1,9 +1,9 @@
 /* Error: expected selector.
  *   ,
- * 1 | /deep/ app-test1{
+ * 1 | /deep/ app-employees{
  *   | ^
  *   '
- *   test1.component.scss 1:1  root stylesheet */
+ *   employees.component.scss 1:1  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ app-test1{\a   \2502  ^\a   \2575 \a   test1.component.scss 1:1  root stylesheet";
+  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ app-employees{\a   \2502  ^\a   \2575 \a   employees.component.scss 1:1  root stylesheet";
 }
