--- a/src/app/components/multiple-table/multiple-table.component.html
+++ b/src/app/components/multiple-table/multiple-table.component.html
@@ -1,5 +1,5 @@
-<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
-<div class="pTable">
+<p-confirmDialog [style]="{width: '500px'}"></p-confirmDialog>
+<div  [ngClass]="{'pTable':!disableClass, 'dialog':disableClass }">
   <p-table
     [columns]="cols"
     [value]="data"
@@ -25,9 +25,11 @@
         <th  [colSpan]="columns.length">
           <span [innerHTML]="header"></span>
           <div  *ngIf="enableActions" style="text-align: right; border-left: 0px; float: right">
-            <i class="pi pi-plus" style="font-size: 20px" (click)="newItem()" ></i>
-            <i class="pi pi-pencil" style="font-size: 20px" (click)="newItemDialog=true"></i>
-            <i class="pi pi-times" style="font-size: 20px" (click)="onDelete()"></i>
+            <i class="pi pi-users" *ngIf="this.additionButton" style="font-size: 20px;margin-left:  10px; cursor: pointer" (click)="additionEmployee()"  pTooltip="თანამშრომლის დამატება" tooltipPosition="top" ></i>
+            <i class="pi pi-table" *ngIf="this.additionButton" style="font-size: 20px;margin-left:  10px; cursor: pointer" (click)="addition()"  pTooltip="{{header}}ს დამატება" tooltipPosition="top" ></i>
+            <i class="pi pi-plus" style="font-size: 20px;margin-left:  10px; cursor: pointer" (click)="newItem()"  pTooltip="{{header}}ს დამატება" tooltipPosition="top" ></i>
+            <i class="pi pi-pencil" style="font-size: 20px;margin-left: 10px; cursor: pointer" (click)="edit()" pTooltip="{{header}}ს რედაქტირება" tooltipPosition="top" ></i>
+            <i class="pi pi-times" style="font-size: 20px; color:red;margin-left: 10px; cursor: pointer" (click)="onDelete()" pTooltip="{{header}}ს წაშლა" tooltipPosition="top" ></i>
           </div>
         </th>
 
@@ -56,10 +58,10 @@
       </tr>
     </ng-template>
   </p-table>
-  <p-dialog *ngIf="newItemDialog" header="დასახელება" [(visible)]="newItemDialog" [modal]="true" [responsive]="true" [style]="{width: '350px', minWidth: '200px'}" [minY]="70"
+  <p-dialog *ngIf="newItemDialog" header="{{header}}ს {{this.dialogType}}" [(visible)]="newItemDialog" [modal]="true" [responsive]="true" [style]="{width: '500px', minWidth: '200px'}" [minY]="70"
             [maximizable]="true" [baseZIndex]="10000">
     <div>
-      <label for="id">დასახელება</label>
+      <label for="id">მიუთითეთ {{header}}ს დასახელება</label>
       <input type="text" id="id"  pInputText [(ngModel)]="this.selectedRow['name']" style="width: 100%;"/>
     </div>
     <p-footer>
