--- a/src/app/views/directory/directory.component.scss
+++ b/src/app/views/directory/directory.component.scss
@@ -44,7 +44,8 @@
     text-overflow: ellipsis;
     overflow: hidden;
     font-family: 'lbet-mt',sans-serif !important;
-    font-size: 12px !important;
+    font-size: 10px !important;
+    padding: 0.571em 5px !important;
   }
 
   .action-button{
@@ -90,6 +91,45 @@
   }
   .ui-dropdown{
     width: 100%;
+  }
+
+  .provider{
+    /deep/ app-multiple-table{
+      background-color: red;
+        .pTable {
+          height: calc(100vh - 70px);
+          .pi-times{
+            margin-right: 10px !important;
+          }
+          .ui-table {
+            height: calc(100vh - 70px);
+
+            .ui-table-wrapper {
+              height: calc(100% - 120px) !important;
+            }
+          }
+        }
+
+    }
+  }
+  .provider1{
+    /deep/ app-multiple-table{
+      background-color: red;
+      .pTable {
+        height: calc(100vh - 70px);
+        .pi-times{
+          margin-right: 20px !important;
+        }
+        .ui-table {
+          height: calc(100vh - 70px);
+
+          .ui-table-wrapper {
+            height: calc(100% - 120px) !important;
+          }
+        }
+      }
+
+    }
   }
 }
 
