--- a/src/app/views/directory/directory.component.html
+++ b/src/app/views/directory/directory.component.html
@@ -70,8 +70,8 @@
     </div>
       <div class="col">
         <app-employees
-          [disableClass]="true"
-          [checkEditionStatus]="true"
+          [disableClass]="false"
+          [checkEditionStatus]="false"
           [selectedEmployeeNode]="selectedEmp.selected"
           [changer]="selectedEmp.selected"
           [title]="selectedEmp.selected['name']"
@@ -91,9 +91,9 @@
     ]"
           [actions]="{
         get: '/api/secured/Staff/Department/Select?dep='+this.selectedEmp.selected['id'],
-        delete: '/api/secured/Organizational/Structure/StaffPosition/Position/Delete',
-        update: '/api/secured/Organizational/Structure/StaffPosition/Position/Update',
-        insert: '/api/secured/Organizational/Structure/StaffPosition/Position/Insert?parentId='+this.selectedEmp.selected['id']
+        delete: '/api/secured/Staff/Delete',
+        update: '/api/secured/Staff/Update',
+        insert: '/api/secured/Staff/Insert?parentId='+this.selectedEmp.selected['id']
     }"
         >
         </app-employees>
