--- a/src/app/views/management/warehouse/warehouse.component.html
+++ b/src/app/views/management/warehouse/warehouse.component.html
@@ -118,7 +118,7 @@
     style="width: 100%;height: calc(100vh - 135px);"
     id="myGrid"
     class="ag-theme-balham"
-
+    [frameworkComponents]="frameworkComponents"
     [columnDefs]="columnDefs"
     [floatingFilter]="true"
     [debug]="true"
