--- a/src/app/views/test/test.component.html
+++ b/src/app/views/test/test.component.html
@@ -28,6 +28,7 @@
   <div class="p-col" >
     <div class="box box box-stretched pTable">
       <app-multiple-table
+        (onEmployeeAction)="onNewEmployee($event)"
         [changer]="selectedItem[1]"
         [title]="selectedItem[1]['name']"
         header="სამმართველო/ს.გ.პ/ს.ც"
@@ -55,6 +56,7 @@
   <div class="p-col">
     <div class="box box box-stretched pTable">
       <app-multiple-table
+        (onEmployeeAction)="onNewEmployee($event)"
         (onAdditionAction)="additionButton($event)"
         [additionButton]="true"
         [changer]="selectedItem[2]"
