--- a/src/app/views/management/warehouse/warehouse.component.scss
+++ b/src/app/views/management/warehouse/warehouse.component.scss
@@ -1,5 +1,17 @@
 /deep/ app-warehouse{
 
+  .inv_lang button {
+    background: none;
+    border:none;
+    opacity: 0.5;
+
+    &.active {
+      opacity: 1;
+      background: #007ad9;
+      border-radius: 25%;
+    }
+  }
+
   .actionButton {
     display: flex;
     justify-content: space-between;
