--- a/src/app/views/management/property/property.component.html
+++ b/src/app/views/management/property/property.component.html
@@ -45,6 +45,8 @@
     (cellClicked)="cart($event)"
     [gridOptions]="gridOptions"
     [getContextMenuItems]="getContextMenuItems"
+    [frameworkComponents]="frameworkComponents"
+
   ></ag-grid-angular>
 </div>
 <div class="row" *ngIf="inOut ==='in'">
@@ -74,6 +76,8 @@
     (cellClicked)="cart($event)"
     [gridOptions]="gridOptions"
     [getContextMenuItems]="getContextMenuItems"
+    [frameworkComponents]="frameworkComponents"
+
   ></ag-grid-angular>
 </div>
 <div class="row" *ngIf="inOut ==='v2'">
