--- a/src/app/views/management/warehouse/warehouse.component.scss
+++ b/src/app/views/management/warehouse/warehouse.component.scss
@@ -1,5 +1,47 @@
 /deep/ app-warehouse{
 
+  app-loading-overlay {
+
+  }
+  ag-grid-angular {
+    .ag-header {
+      overflow: visible !important;
+      .ag-header-viewport {
+        overflow: visible !important;
+        .ag-header-row {
+          overflow: visible !important;
+          .ag-header-cell {
+            overflow: visible !important;
+            .ag-input-text-wrapper {
+              overflow: visible !important;
+              div[ref="eDateWrapper"] {
+                overflow: visible !important;
+                .form-group {
+                  margin-bottom: 0;
+                  input {
+                    height: 20px;
+                    width: 78px;
+                    border-radius: 0;
+                    padding: 0;
+                    font-size: 12px;
+                    padding-left: 3px;
+                  }
+                  .input-group-append {
+                    button {
+                      height: 20px;
+                      width: 20px;
+                    }
+                  }
+
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   .inv_lang button {
     background: none;
     border:none;
